# eso-addon-manifest

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
resources/test/: AddonName.txt
src/: error.rs  lib.rs
