[package]
name = "eso-addon-manifest"
version = "0.1.0"
edition = "2021"
description = "A simple ESO AddOn Manifest.txt file parser and validator written in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.3"
thiserror = "1.0.40"
